k8s/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
  namespace: gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: blog.sonhs.com
      allowedRoutes:
        namespaces:
          from: All

    # 처음에는 gateway가 깨지면 안되므로 https 는 주석처리해두고 인증서 발급받은 이후 주석 해제
#    - name: https
#      protocol: HTTPS
#      port: 443
#      hostname: blog.sonhs.com
#      allowedRoutes:
#        namespaces:
#          from: All
#      tls:
#        mode: Terminate
#        certificateRefs:
#          - kind: Secret
#            name: blog-sonhs-com-tls
